# CPP_HokusBlokus

./: .gitignore  Acknowledgements.md  CMakeLists.txt  CPPBuildAid.py  LICENSE  PieceSetGenerator.py  README.md  ResourceGenerator.py  includelist.cmake  projectDescription.xml  sourcelist.cmake  swig.i  testStarter.sh
cmakeListings/: includeDirsAbs.cmake  includeDirsRel.cmake  includeFilesAbs.cmake  includeFilesRel.cmake  sourceDirsAbs.cmake  sourceDirsRel.cmake  sourceFilesAbs.cmake  sourceFilesRel.cmake
include/blokus/: bitsetmanager.hpp  board.hpp  color.hpp  colorQueue.hpp  debugging.hpp  gameState.hpp  gamestate.hpp  globals.hpp  helpers.hpp  maskType.hpp  masktype.hpp  move.hpp  moveType.hpp  piece.hpp  pieceBitmask.hpp  pieceBitmaskComplement.hpp  pieceManager.hpp  pieceRotation.hpp  pieceShape.hpp  piecebitmask.hpp  piecebitset.hpp  piecemanager.hpp  pieceshape.hpp  piecetype.hpp  player.hpp  position.hpp  vec2i.hpp  vec2ui.hpp
include/blokus/ai/: logic.hpp
include/blokus/benchmark/: benchmark.hpp
include/blokus/benchmarking/: benchmark.hpp
include/blokus/client/: blokusClient.hpp  tcpClient.hpp
include/blokus/communication/: scMessage.hpp  scMessageConverter.hpp  scMessageType.hpp
include/blokus/debug/: debug.hpp
include/blokus/optimization/: boundingRect.hpp  boundingRectOptimizer.hpp
include/pbm/: pbmimage.hpp  pbmloader.hpp
include/swig/: swigInterface.hpp
include/util/: logger.hpp  xmlStringWriter.hpp
include/util/logging/: logger.hpp
resources/: BlokusPieceCorners.pbm  BlokusPieceEdgeCornerDimensions.txt  BlokusPieceShapeDimensions.txt  BlokusPieceShapes.pbm  BlokusPiecesEdges.pbm
src/blokus/: bitsetmanager.cpp  board.cpp  color.cpp  colorQueue.cpp  debugging.cpp  gameState.cpp  gamestate.cpp  globals.cpp  helpers.cpp  maskType.cpp  move.cpp  piece.cpp  pieceBitmask.cpp  pieceBitmaskComplement.cpp  pieceManager.cpp  pieceRotation.cpp  pieceShape.cpp  piecebitmask.cpp  piecebitset.cpp  piecemanager.cpp  pieceshape.cpp  player.cpp  position.cpp  vec2i.cpp  vec2ui.cpp
src/blokus/ai/: logic.cpp
src/blokus/benchmark/: benchmark.cpp
src/blokus/benchmarking/: benchmark.cpp
src/blokus/client/: blokusClient.cpp  starter.cpp  tcpClient.cpp
src/blokus/communication/: scMessage.cpp  scMessageConverter.cpp
src/blokus/debug/: debug.cpp
src/blokus/optimization/: boundingRect.cpp  boundingRectOptimizer.cpp
src/client/: starter.cpp
src/pbm/: pbmimage.cpp  pbmloader.cpp
src/swig/: swigInterface.cpp
src/util/: logger.cpp
swigOut/: Blokus.py
